<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="action_replay">Play again</string>
    <string name="action_request">Request</string>
    <string name="login">Login</string>
    <string name="login_email_hint">Enter your email</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="request_email_hint">Request game to…</string>
    <string name="firebase_sign_in_fail">Sign in fail</string>
    <string name="firebase_sign_up_fail">Sign up fail</string>
    <string name="firebase_auth_instance_null">Firebase authentication instance must be initialized</string>
    <string name="player">PLAYER</string>
    <string name="opponent">OPPONENT</string>
</resources>
