<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.siziksu.kotlinTicTacToe.view.main.MainActivity">

    <TextView
        style="@style/AppTheme.SubPlayerInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/player"
        app:layout_constraintLeft_toLeftOf="@+id/playerInfo"
        app:layout_constraintRight_toRightOf="@+id/playerInfo"
        app:layout_constraintTop_toTopOf="@+id/playerInfo"
        app:layout_constraintBottom_toBottomOf="@+id/playerInfo" />

    <TextView
        style="@style/AppTheme.PlayerInfo"
        android:id="@+id/playerInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintLeft_toLeftOf="@+id/gameButtonsContainer"
        app:layout_constraintRight_toRightOf="@+id/gameButtonsContainer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/AppTheme.SubPlayerInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/opponent"
        app:layout_constraintLeft_toLeftOf="@+id/opponentInfo"
        app:layout_constraintRight_toRightOf="@+id/opponentInfo"
        app:layout_constraintTop_toTopOf="@+id/opponentInfo"
        app:layout_constraintBottom_toBottomOf="@+id/opponentInfo" />

    <TextView
        style="@style/AppTheme.PlayerInfo"
        android:id="@+id/opponentInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/game_button_spacing"
        app:layout_constraintLeft_toLeftOf="@+id/gameButtonsContainer"
        app:layout_constraintRight_toRightOf="@+id/gameButtonsContainer"
        app:layout_constraintTop_toBottomOf="@+id/playerInfo" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/gameButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton1"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginEnd="@dimen/game_button_spacing"
            app:layout_constraintRight_toLeftOf="@+id/gameButton2"
            app:layout_constraintTop_toTopOf="@+id/gameButton2"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton2"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginBottom="@dimen/game_button_spacing"
            app:layout_constraintBottom_toTopOf="@+id/gameButton5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton3"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginStart="@dimen/game_button_spacing"
            app:layout_constraintLeft_toRightOf="@+id/gameButton2"
            app:layout_constraintTop_toTopOf="@+id/gameButton2"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton4"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginEnd="@dimen/game_button_spacing"
            app:layout_constraintRight_toLeftOf="@+id/gameButton5"
            app:layout_constraintTop_toTopOf="@+id/gameButton5"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton5"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginTop="@dimen/game_button_spacing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameButton2"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton6"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginStart="@dimen/game_button_spacing"
            app:layout_constraintLeft_toRightOf="@+id/gameButton5"
            app:layout_constraintTop_toTopOf="@+id/gameButton5"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton7"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginEnd="@dimen/game_button_spacing"
            app:layout_constraintRight_toLeftOf="@+id/gameButton8"
            app:layout_constraintTop_toTopOf="@+id/gameButton8"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton8"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gameButton5"
            android:layout_marginTop="@dimen/game_button_spacing"
            android:contentDescription="@string/app_name" />

        <ImageView
            style="@style/AppTheme.GameButton"
            android:id="@+id/gameButton9"
            android:layout_width="@dimen/game_button_size"
            android:layout_height="@dimen/game_button_size"
            android:layout_marginStart="@dimen/game_button_spacing"
            app:layout_constraintLeft_toRightOf="@+id/gameButton8"
            app:layout_constraintTop_toTopOf="@+id/gameButton8"
            android:contentDescription="@string/app_name" />
    </android.support.constraint.ConstraintLayout>

    <EditText
        style="@style/AppTheme.InputText"
        android:id="@+id/sendRequestEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/game_button_spacing"
        android:hint="@string/request_email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toLeftOf="@+id/gameButtonsContainer"
        app:layout_constraintRight_toRightOf="@+id/gameButtonsContainer"
        app:layout_constraintBottom_toTopOf="@+id/sendRequestButton" />

    <Button
        style="@style/AppTheme.Button"
        android:id="@+id/sendRequestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/action_request"
        android:onClick="buttonClick"
        app:layout_constraintRight_toRightOf="@+id/gameButtonsContainer"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        style="@style/AppTheme.ReplayButton"
        android:visibility="gone"
        android:id="@+id/resetGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_replay"
        android:onClick="buttonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
